# shsynth

./: AGENTS.md  Cargo.toml  Makefile  README.md  THIRD_PARTY.md
config/: controller.conf  shsynth.conf
controller-profiles/: catalog.json
demos/: amazing-grace.mid  amazing-grace.shsong  auld-lang-syne.mid  auld-lang-syne.shsong  cleared-demos.json  cotton-eyed-joe.mid  cotton-eyed-joe.shsong  danny-boy.mid  danny-boy.shsong  drunken-sailor.mid  drunken-sailor.shsong  greensleeves.mid  greensleeves.shsong  house-of-the-rising-sun.mid  house-of-the-rising-sun.shsong  scarborough-fair.mid  scarborough-fair.shsong  wellerman.mid  wellerman.shsong  whiskey-in-the-jar.mid  whiskey-in-the-jar.shsong
docs/: AUDIO_GRAPH.md  BUILD_WEEK.md  BUILD_WEEK_FEATURE_MATRIX.md  CODEX_ASSISTED_SETUP.md  CONFIGURATION.md  CONNECTIONS.md  CONTROLLER_INTERFACE.md  CONTROLLER_PROFILES.md  DEMO_SONGS.md  FINAL_PERFORMANCE_BUS.md  FIRST_RUN.md  FUTURE_IMPROVEMENTS.md  HELP.md  HOW_IT_WORKS.md  INSTALLATION.md  MAINTAINER_HELPERS.md  MENU_MANUAL.md  MR18_TEST_PLAN.md  MULTITRACK_PRESENTATION.md  MULTITRACK_RECORDING.md  NEW_PATCHES.md  PHASE1_AUDIO_GRAPH_MEASUREMENT.md  PHASE2_AUDIO_GRAPH_MEASUREMENT.md  PHASE3_4_AUDIO_GRAPH_MEASUREMENT.md  PI5_HEADROOM_PLAN.md  POST_COMPETITION_MIXER_AUX_PLAN.md  POST_COMPETITION_RHYTHM_PLAN.md  README.md  RELEASE_ROADMAP.md  TRACKER.md  UCENJE_KROZ_ISTRAZIVANJE.md  USING_SHR_DAW.md  WORKFLOW_AUDIT_HANDOFF.md  WORKSPACE_HANDOFF.md
drum-patterns/: 01-rock-backbeat.shdrum  02-four-on-floor.shdrum  03-techno-drive.shdrum  04-disco.shdrum  05-boom-bap.shdrum  (+8 more)
(+50 files in other folders)
