[package]
name = "shr-daw"
version = "0.392.0"
edition = "2021"
rust-version = "1.85"
description = "Raspberry Pi mini DAW with a Rust TUI, FT2 tracker, MIDI routing, synth hosts, loops, and recording"
license = "MIT"

[[bin]]
name = "shr"
path = "src/main.rs"

[dependencies]
alsa = "0.7.1"
anyhow = "1.0"
crossterm = "0.26"
hound = "3.5"
libc = "0.2"
midir = "0.9"
quick-xml = "0.41"
ratatui = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
unicode-width = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
